--- a/client/play.html
+++ b/client/play.html
@@ -2,43 +2,44 @@
 <html lang="zh">
 
 <head>
-    <title>m3u8 在线播放</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,viewport-fit=cover" name="viewport" />
-    <link crossorigin="anonymous" rel="stylesheet" href="https://lib.baomitu.com/dplayer/latest/DPlayer.min.css">
-    <style>
-        body {
-            margin: 0;
-        }
-    </style>
+  <title>M3U8 在线播放</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,viewport-fit=cover"
+    name="viewport" />
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="dplayer"></div>
-    <script crossorigin="anonymous"
-        integrity="sha512-yi//c0pOEPlBEqUMgK7Ia1VXQT9TwuMHJIRU+T2lyV7YxsMhbF35N/DGYkCFWfC9ebjdupP4xadFyFVTz/sgEg=="
-        src="https://lib.baomitu.com/hls.js/1.3.0/hls.min.js"></script>
-    <script crossorigin="anonymous" src="https://lib.baomitu.com/dplayer/latest/DPlayer.min.js"></script>
+  <div id="dplayer"></div>
+  <script src="https://s4.zstatic.net/ajax/libs/hls.js/1.5.18/hls.min.js"
+    integrity="sha512-hARxLWym80kd0Bzl5/93OuW1ujaKfvmJ90yTKak/RB67JuNIjtErU2H7H3bteyfzMuqiSK0tXarT7eK6lEWBBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://s4.zstatic.net/ajax/libs/dplayer/1.26.0/DPlayer.min.js" crossorigin="anonymous"
+    referrerpolicy="no-referrer"></script>
 
-    <script>
-        const url = location.href.split('url=')[1];
-        if (!url) {
-            document.getElementById('dplayer').innerText = '请传入播放地址参数 url=';
-        } else {
-            const dp = new DPlayer({
-                container: document.getElementById('dplayer'),
-                autoplay: true,
-                video: {
-                    url: decodeURIComponent(url),
-                    type: 'auto',
-                },
-                pluginOptions: {
-                    hls: {},
-                },
-            });
-        }
-    </script>
+  <script>
+    const url = location.href.split('url=')[1];
+    if (!url) {
+      document.getElementById('dplayer').innerText = '请传入播放地址参数 url=';
+    } else {
+      const dp = new DPlayer({
+        container: document.getElementById('dplayer'),
+        autoplay: true,
+        video: {
+          url: decodeURIComponent(url),
+          type: 'auto',
+        },
+        pluginOptions: {
+          hls: {},
+        },
+      });
+    }
+  </script>
 </body>
 
 </html>
