--- a/client/index.html
+++ b/client/index.html
@@ -824,14 +824,14 @@ services:
           }
         },
         /** 显示新建下载弹窗 */
-        showNewDownloadDialog: function () {
+        showNewDownloadDialog () {
           Swal.fire({
             title: '新建下载',
-            width: '800px',
+            width: '900px',
             html: `
               <div class="text-left">
                 <div class="flex flex-row gap-4">
-                  <input type="text" id="playUrl" placeholder="输入视频播放页地址，尝试提取m3u8下载链接" autocomplete="off" id="urlInput" class="flex-1 border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" value="">
+                  <input type="text" id="playUrl" placeholder="[实验性]输入视频播放页地址，尝试提取m3u8下载链接" autocomplete="off" id="urlInput" class="flex-1 border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" value="">
                   <div class="flex flex-row gap-1">
                     <button type="button" id="getM3u8UrlsBtn" class="player-btn px-2 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 focus:outline-none">
                       提取
@@ -877,7 +877,7 @@ services:
             preConfirm: () => {
               const urlsText = document.getElementById('downloadUrls').value.trim();
               const filename = document.getElementById('filename').value.trim();
-              const saveDir = document.getElementById('saveDir').value.trim();
+              let saveDir = document.getElementById('saveDir').value.trim();
               const headersText = document.getElementById('headers').value.trim();
               const ignoreSegments = document.getElementById('ignoreSegments').value.trim();
 
@@ -899,9 +899,14 @@ services:
                 return false;
               }
 
+              if (urls.length > 1 && filename && !saveDir.includes(filename)) {
+                if (!saveDir) saveDir = this.config.saveDir;
+                saveDir = saveDir.replace(/\/?$/, '') + '/' + filename;
+              }
+
               return urls.map((item, idx) => ({
                 url: item.url,
-                filename: item.name || (filename ? `${filename}第${idx + 1}集` : ''),
+                filename: item.name || (filename ? `${filename}${urls.length > 1 ? `第${idx + 1}集` : ''}` : ''),
                 saveDir,
                 headers,
                 ignoreSegments,
