feat: update package dependencies, enhance README, and improve language support for i18n

--- a/packages/frontend/public/play.html
+++ b/packages/frontend/public/play.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 
 <head>
   <title>M3U8 Player</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,viewport-fit=cover"
+  <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     name="viewport" />
   <link rel="shortcut icon" href="logo.png">
   <style>
